--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@google-cloud/text-to-speech": "^3.1.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "uuidv4": "^6.0.7"
